--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <html>
     <head>
         <link href="custom.css" rel="stylesheet" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
         <script src="custum.js"></script>
 
     </head>
     
     <body>
        <button id="blue-header-button" type="button"></button>
-        <h1>shrek</h1> <h7>shrek</h7>
+        <h1 class="odd">shrek</h1> 
+        <h7>shrek</h7>
         <h2>shrek</h2> <h8>shrek</h8>
         <h2>shrek</h2> 
         <h3>shrek</h3>
@@ -21,6 +24,7 @@
         <table> 
             <img src="https://media1.giphy.com/media/RKA9WE5HGkLi8/giphy.webp?cid=ecf05e47n6jpwlbnt8gclfw0k13k750jf3asr95oiub7xjrb&rid=giphy.webp&ct=g" width="750
             " />
+            <h1> click 2 times</h1>
              <a href="https://cdn130.picsart.com/307160698169201.jpg" target="_blank"> this is shrek</a>
              <a href="https://i.redd.it/o3ptlv2r6d681.jpg" target="_blank"> this is shrek</a>
             <img src=" https://cdn.theatlantic.com/thumbor/PMBeEU9NDgDHIg_cJAz2wtGjqMg=/media/img/posts/2014/05/shrek2/original.jpg" />
